PROTON-2643: C ssl driver - avoid hang in handshake in older versions of OpenSSL